fix:empty white space

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,12 @@
   font-family: EconomicaBold;
   src: url(./assets/economica-bold.ttf);
 }
+html {
+  overflow-x: hidden!important;
+}
+* {
+  box-sizing: border-box;
+}
 
 body {
   text-align: center;
@@ -99,9 +105,9 @@ h1 {
   background: var(--mainBlue);
 }
 
-.project-img{
-  height: 250px;
-  width: 350px;
+.project-img {
+  height: 300px;
+  width: 300px;
 }
 /* .navbar-toggler-icon{
  
